@@ -487,9 +487,9 @@ DialogOptions::DialogOptions(wxWindow *parent)
 		wxFlexGridSizer *displaySizer4 = new wxFlexGridSizer(14,2,2,2);
 
 		// First sizer
-		wxString labels1[5] = { _("Spectrum Invert Selection"), _("Draw Secondary Lines"), _("Draw Selection Background"), _("Draw Timeline"), _("Draw Cursor Time") };
-		wxString options1[5] = { _T("Spectrum invert selection"), _T("Draw Secondary Lines"), _T("Draw Selection Background") , _T("Draw Timeline"), _T("Draw Cursor Time")};
-		for (int i=0;i<5;i++) {
+		wxString labels1[4] = { _("Draw Secondary Lines"), _("Draw Selection Background"), _("Draw Timeline"), _("Draw Cursor Time") };
+		wxString options1[4] = { _T("Draw Secondary Lines"), _T("Draw Selection Background") , _T("Draw Timeline"), _T("Draw Cursor Time")};
+		for (int i=0;i<4;i++) {
 			wxCheckBox *control = new wxCheckBox(displayPage,-1,labels1[i]);
 			Bind(control,_T("Audio ") + options1[i]);
 			displaySizer3->Add(control,1,wxEXPAND | wxALL,5);
